Search Engine Optimization, OpenGraph added

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Webprog</title>
+    <title>Webprogramozás I. beadandó</title>
     <base href="/">
+
+    <meta name="title" content="Webprog beadandó">
+    <meta name="description" content="Webprogramozás alapok: HTML, CSS, Bootstrap, JavaScript">
+    <meta name="keyword" content="webprrogramozás, html, css, bootstrap, javascript">
+    <meta name="robots" content="index/follow">
+
+    <!-- Facebook Open Graph Protocol -->
+    <meta property="og:title" content="Webprogramozás beadandó">
+    <meta property="og:description" content="Webprogramozás alapok: HTML, CSS, Bootstrap, JavaScript">
+    <!-- og:type: article, music, video, website-->
+    <meta property="og:type" content="article, services">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1607706189992-eae578626c86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+    <meta property="og:url" content="www.webprog.com">
+    <meta property="og:site_name" content="www.webprog.com">
+    <!--url felülírja a site_name-t-->
+
+    <!-- Twitter Open Graph Protocol -->
+    <!-- card típus: app, summary, summary_large_img -->
+    <meta name="twitter:card" content="app">
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1607706189992-eae578626c86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+    <meta name="twitter:title" content="Webprogramozás beadandó">
+    <meta name="twitter:description" content="Webprogramozás alapok: HTML, CSS, Bootstrap, JavaScript">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
