--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
     <!-- og:type: article, music, video, website-->
     <meta property="og:type" content="article, services">
     <meta property="og:image" content="https://images.unsplash.com/photo-1607706189992-eae578626c86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
-    <meta property="og:url" content="www.webprog.com">
-    <meta property="og:site_name" content="www.webprog.com">
+    <meta property="og:url" content="https://webprog-c95e2.web.app">
+    <meta property="og:site_name" content="https://webprog-c95e2.web.app">
     <!--url felülírja a site_name-t-->
 
     <!-- Twitter Open Graph Protocol -->
